# reference_corrector

./: README.md
configs/debruijn/: config.info.template
debruijn/: CMakeCache.txt  CMakeLists.txt  Makefile  config_struct.cpp  config_struct.hpp  launch.hpp  reference_correction.cpp  reference_correction.hpp  reference_corrector.hpp
test1/: CMakeLists.txt  data_loader.cpp
